updating scrollbar script so that it properly creates and destroys the object. also fixing rest call with team_id

--- a/relay/public/css/Css.css
+++ b/relay/public/css/Css.css
@@ -2316,6 +2316,7 @@ table
 {
 	height: 90px;
 	width: 100%;
+	overflow: hidden;
 }
 .personalTableFirstRow
 {
